--- a/site.yml
+++ b/site.yml
@@ -1,20 +1,20 @@
 ---
 
-- name: apply common configuration to all nodes.
+- name: Apply common configuration to all nodes.
   hosts: all
   remote_user: root
 
   roles:
     - common
 
-- name: comfigure and deploy openldap servers.
+- name: Comfigure and deploy openldap servers.
   hosts: ldapservers
   remote_user: root
 
   roles:
     - ldapserver
 
-- name: populate contents.
+- name: Populate contents.
   hosts: masterldapserver
 
   remote_user: root
